--- a/front/src/app/components/info-book/info-book.component.scss
+++ b/front/src/app/components/info-book/info-book.component.scss
@@ -45,6 +45,7 @@
 	height: 70vh;
 	display: flex;
 	flex-direction: column;
+	gap: 1rem;
 
 	.controls {
 		padding: 0 1rem;
@@ -142,6 +143,12 @@
 
 				.icon-downloaded {
 					color: var(--scraping-status-ready-color);
+					cursor: pointer;
+					transition: color 0.2s;
+
+					&:hover {
+						color: #ff6b6b;
+					}
 				}
 
 				.download-progress {
@@ -230,6 +237,22 @@
 			object-fit: cover;
 			-webkit-user-drag: none;
 			pointer-events: none;
+		}
+
+		.cover-placeholder {
+			width: 100%;
+			height: 100%;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			background-color: var(--secondary-color);
+
+			app-icons {
+				width: 48px;
+				height: 48px;
+				color: var(--app-text-color);
+				opacity: 0.4;
+			}
 		}
 
 		.metadata {
