feat: Adds mixins for dropdown menus and implements forced update checking in the book component.

--- a/front/src/app/pages/book/book.component.html
+++ b/front/src/app/pages/book/book.component.html
@@ -66,6 +66,12 @@
 								<app-icons name="share" />
 								<span>Compartilhar</span>
 							</button>
+							@if (admin) {
+							<button (click)="forceCheckUpdates()">
+								<app-icons name="refresh-ccw" />
+								<span>Forçar atualização</span>
+							</button>
+							}
 						</div>
 						}
 					</div>
