feat: Adds support for saved pages with comments and menu context.

--- a/front/src/app/components/image-viewer/image-viewer.component.html
+++ b/front/src/app/components/image-viewer/image-viewer.component.html
@@ -7,5 +7,8 @@
 		@if(imageTitle) {
 		<div class="image-title">{{ imageTitle }}</div>
 		}
+		@if(imageDescription) {
+		<div class="image-description">{{ imageDescription }}</div>
+		}
 	</div>
 </div>
