--- a/front/src/app/components/info-book/info-book.component.scss
+++ b/front/src/app/components/info-book/info-book.component.scss
@@ -122,7 +122,7 @@
 		border-radius: 12px;
 		width: 100%;
 		transition: background-color 0.3s, box-shadow 0.3s, transform 0.2s;
-		background-color: var(--secondary-color);
+		background-color: rgb(from var(--secondary-color) r g b / 0.7);
 		flex: none;
 		display: flex;
 		align-items: center;
@@ -220,7 +220,8 @@
 				}
 
 				@keyframes pulse {
-					0%, 100% {
+					0%,
+					100% {
 						opacity: 1;
 					}
 					50% {
@@ -262,7 +263,8 @@
 	}
 }
 
-#covers, #saved-pages {
+#covers,
+#saved-pages {
 	.scrollable {
 		display: grid;
 		grid-template-columns: repeat(auto-fit, 225px);
@@ -351,19 +353,19 @@
 			pointer-events: none;
 			padding: 1rem;
 			text-align: center;
-            gap: 0.5rem;
+			gap: 0.5rem;
 
-            .comment {
-                font-size: 0.9rem;
-                font-style: italic;
-                opacity: 0.9;
-                max-width: 100%;
-                overflow: hidden;
-                text-overflow: ellipsis;
-                display: -webkit-box;
-                -webkit-line-clamp: 1;
-                -webkit-box-orient: vertical;
-            }
+			.comment {
+				font-size: 0.9rem;
+				font-style: italic;
+				opacity: 0.9;
+				max-width: 100%;
+				overflow: hidden;
+				text-overflow: ellipsis;
+				display: -webkit-box;
+				-webkit-line-clamp: 1;
+				-webkit-box-orient: vertical;
+			}
 		}
 
 		&.selected {
