--- a/front/src/app/components/inputs/button/button.component.scss
+++ b/front/src/app/components/inputs/button/button.component.scss
@@ -1,8 +1,6 @@
 button {
 	display: flex;
 	gap: 0.5rem;
-	border-radius: 50px;
-	padding: 5px 15px;
 	width: 100%;
 	border: none;
 	outline: none;
@@ -11,7 +9,49 @@ button {
 	transition: 0.3s;
 	cursor: pointer;
 	font-weight: 500;
-	background-color: var(--primary-color);
+
+	&.fill-full {
+		background-color: var(--primary-color);
+	}
+
+	&.fill-border {
+		background-color: transparent;
+		border: 2px solid var(--primary-color);
+		color: var(--primary-color);
+	}
+
+	&.fill-none {
+		background-color: transparent;
+	}
+
+	&.rounded-none {
+		border-radius: 2px;
+	}
+
+	&.rounded-small {
+		border-radius: 8px;
+	}
+
+	&.rounded-medium {
+		border-radius: 16px;
+	}
+
+	&.rounded-large {
+		border-radius: 24px;
+	}
+
+	&.rounded-full {
+		border-radius: 9999px;
+	}
+
+	&.padding-none {
+		padding: 0;
+		width: auto;
+	}
+
+	&.padding-normal {
+		padding: 5px 15px;
+	}
 
 	&:focus {
 		outline: 2px solid var(--app-text-color);
