--- a/front/src/app/components/inputs/button/button.component.scss
+++ b/front/src/app/components/inputs/button/button.component.scss
@@ -1,7 +1,12 @@
+:host {
+	display: inline-block;
+}
+
 button {
 	display: flex;
 	gap: 0.5rem;
 	width: 100%;
+	height: 100%;
 	border: none;
 	outline: none;
 	justify-content: center;
@@ -51,6 +56,11 @@ button {
 
 	&.padding-normal {
 		padding: 5px 15px;
+	}
+
+	&.radio-square {
+		aspect-ratio: 1/1;
+		padding: 5px;
 	}
 
 	&:focus {
