--- a/front/src/app/pages/book/book.component.scss
+++ b/front/src/app/pages/book/book.component.scss
@@ -13,15 +13,16 @@ $page-size: 1200px;
 	top: 0;
 	left: 0;
 	height: 100dvw;
-	background-size: contain;
+	background-size: auto 100%;
 	background-position: top left;
 	transform: rotate(90deg) translateY(-99.5dvw);
 	transform-origin: top left;
+	background-repeat: repeat-x;
+	background-color: rgb(from var(--app-background-color) r g b / 0.5);
+	background-blend-mode: overlay;
 	z-index: -1;
 	pointer-events: none;
 	filter: blur(50px);
-	background-color: rgb(from var(--app-background-color) r g b / 0.5);
-	background-blend-mode: overlay;
 
 	.gradient {
 		opacity: 0.65;
@@ -162,36 +163,20 @@ $page-size: 1200px;
 
 					app-button {
 						flex: 0 0 auto;
-						min-width: 150px;
+					}
+
+					.btn-actions {
+						position: relative;
+						width: 44px;
+						height: 44px;
 					}
 
 					.options-wrapper {
-						position: relative;
-						width: 30px;
-
-						.options-btn {
-							display: flex;
-							align-items: center;
-							justify-content: center;
-							width: 44px;
-							height: 44px;
-							border: none;
-							border-radius: 50%;
-							background-color: var(--primary-color);
+						app-button {
+							width: 100%;
+							height: 100%;
 							cursor: pointer;
 							transition: background-color 0.2s, transform 0.1s;
-
-							&:hover {
-								background-color: var(--secondary-color);
-							}
-
-							&:active {
-								transform: scale(0.95);
-							}
-
-							app-icons {
-								color: var(--app-text-color);
-							}
 						}
 
 						.options-dropdown {
@@ -261,6 +246,24 @@ $page-size: 1200px;
 			}
 			.sensitive {
 				background-color: var(--red);
+			}
+			.auto-update-badge {
+				display: flex;
+				align-items: center;
+				gap: 0.3rem;
+				background-color: var(--secondary-color);
+				opacity: 0.7;
+				cursor: default;
+
+				app-icons {
+					width: 1rem;
+					height: 1rem;
+				}
+
+				&.active {
+					background-color: var(--green);
+					opacity: 1;
+				}
 			}
 
 			.placeholder {
