--- a/front/src/app/components/aside/aside.component.scss
+++ b/front/src/app/components/aside/aside.component.scss
@@ -18,7 +18,7 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.5);
+	background-color: rgb(from var(--black) r g b / 0.5);
 	animation: fadeIn 0.3s ease-in-out;
 }
 
@@ -38,11 +38,11 @@
 	}
 
 	&.position-right {
-		box-shadow: -2px 0 8px rgba(0, 0, 0, 0.15);
+		box-shadow: -2px 0 8px rgb(from var(--black) r g b / 0.15);
 	}
 
 	&.position-left {
-		box-shadow: 2px 0 8px rgba(0, 0, 0, 0.15);
+		box-shadow: 2px 0 8px rgb(from var(--black) r g b / 0.15);
 	}
 }
 
