--- a/front/src/app/components/inputs/select/select.component.scss
+++ b/front/src/app/components/inputs/select/select.component.scss
@@ -60,7 +60,7 @@
 
 	.selected-value {
 		flex: 1;
-		color: rgba(255, 255, 255, 0.6);
+		color: rgb(from var(--white) r g b / 0.6);
 		font-size: 16px;
 	}
 
