--- a/front/src/app/components/notification/custom-components/book-download-modal/book-download-modal.component.scss
+++ b/front/src/app/components/notification/custom-components/book-download-modal/book-download-modal.component.scss
@@ -82,7 +82,7 @@
 
     &.selected {
       border-color: var(--primary-color);
-      background: rgba(var(--primary-color-rgb), 0.1);
+      background: rgb(from var(--primary-color) r g b / 0.1);
 
       app-icons {
         color: var(--primary-color);
@@ -156,7 +156,7 @@
   }
 
   &.selected {
-    background: rgba(var(--primary-color-rgb), 0.05);
+    background: rgb(from var(--primary-color) r g b / 0.05);
   }
 }
 
