--- a/front/src/app/components/notification/custom-components/confirmation-notification/confirmation-notification.component.scss
+++ b/front/src/app/components/notification/custom-components/confirmation-notification/confirmation-notification.component.scss
@@ -8,25 +8,25 @@
 }
 
 .icon-container svg {
-	color: #ffc107;
+	color: var(--yellow);
 	stroke-width: 2;
 }
 
 h2 {
 	margin: 0 0 15px 0;
 	font-size: 1.5em;
-	color: #333;
+	color: var(--gray-900);
 }
 
 .message {
 	margin-bottom: 20px;
 	line-height: 1.6;
-	color: #666;
+	color: var(--gray-700);
 }
 
 .details {
 	text-align: left;
-	background: #f8f9fa;
+	background: var(--gray-100);
 	padding: 15px;
 	border-radius: 4px;
 	margin-bottom: 15px;
@@ -42,9 +42,9 @@ h2 {
 }
 
 .warning-box {
-	background: #fff3cd;
-	border: 1px solid #ffc107;
+	background: var(--light-yellow);
+	border: 1px solid var(--yellow);
 	padding: 10px;
 	border-radius: 4px;
-	color: #856404;
+	color: var(--dark-yellow);
 }
