--- a/front/src/app/components/notification/custom-components/reader-settings-notification/reader-settings-notification.component.scss
+++ b/front/src/app/components/notification/custom-components/reader-settings-notification/reader-settings-notification.component.scss
@@ -55,7 +55,7 @@
 	align-items: center;
 	justify-content: space-between;
 	padding: 20px 0;
-	border-bottom: 1px solid var(--border-color, #f3f4f6);
+	border-bottom: 1px solid var(--border-color, var(--gray-100));
 
 	&.column {
 		flex-direction: column;
@@ -95,7 +95,7 @@
 			margin: 0 0 4px 0;
 			font-size: 16px;
 			font-weight: 500;
-			color: var(--app-text-color, #111827);
+			color: var(--app-text-color, var(--gray-900));
 		}
 
 		p {
